# overlay-scribe

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
apps/macos/OverlayScribe/OverlayScribe/: CanvasView.swift  HotkeyManager.swift  Info.plist  OverlayScribe-Bridging-Header.h  OverlayScribeApp.swift  OverlayState.swift  OverlayWindowManager.swift  StatusMenuView.swift
apps/macos/OverlayScribe/OverlayScribe.xcodeproj/: project.pbxproj
core/overlay_scribe_core/: Cargo.toml
core/overlay_scribe_core/src/: geometry.rs  lib.rs  model.rs  render.rs  store.rs
core/overlay_scribe_ffi/: Cargo.toml
core/overlay_scribe_ffi/src/: lib.rs  types.rs
scripts/: gen-bindings.sh  run-macos.sh
