[package]
name = "overlay_scribe_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "overlay_scribe_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
overlay_scribe_core = { path = "../overlay_scribe_core" }
uniffi = { version = "0.30", features = ["cli"] }
serde_json = "1"
